@@ -1,16 +1,14 @@
 package br.com.fiap.postech.soat16.fase1.controller;
 
-import br.com.fiap.postech.soat16.fase1.dto.pagination.PageableRequest;
-import br.com.fiap.postech.soat16.fase1.dto.pagination.PageableResponse;
-import br.com.fiap.postech.soat16.fase1.dto.pagination.Pagination;
-import br.com.fiap.postech.soat16.fase1.dto.request.CustomerCreateRequest;
-import br.com.fiap.postech.soat16.fase1.dto.request.CustomerUpdateRequest;
-import br.com.fiap.postech.soat16.fase1.dto.response.CustomerResponse;
-import br.com.fiap.postech.soat16.fase1.exception.CustomerNotFoundException;
-import br.com.fiap.postech.soat16.fase1.exception.DuplicatePhoneNumberException;
-import br.com.fiap.postech.soat16.fase1.service.CustomerService;
-import io.smallrye.mutiny.Uni;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
+
+import java.time.OffsetDateTime;
+import java.util.List;
+import java.util.UUID;
+
 import jakarta.ws.rs.core.Response;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -19,12 +17,16 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.time.OffsetDateTime;
-import java.util.List;
-import java.util.UUID;
+import br.com.fiap.postech.soat16.fase1.dto.pagination.PageableRequestDto;
+import br.com.fiap.postech.soat16.fase1.dto.pagination.PageableResponseDto;
+import br.com.fiap.postech.soat16.fase1.dto.pagination.PaginationDto;
+import br.com.fiap.postech.soat16.fase1.dto.request.CustomerCreateRequest;
+import br.com.fiap.postech.soat16.fase1.dto.request.CustomerUpdateRequest;
+import br.com.fiap.postech.soat16.fase1.dto.response.CustomerResponse;
+import br.com.fiap.postech.soat16.fase1.exception.*;
+import br.com.fiap.postech.soat16.fase1.service.CustomerService;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import io.smallrye.mutiny.Uni;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("CustomerController — Unit Tests")
@@ -42,45 +44,45 @@ class CustomerControllerTest {
     @BeforeEach
     void setUp() {
         controller = new CustomerController(service);
-        response = new CustomerResponse(FIXED_UUID, "John", "Doe", "john.doe@example.com", "5511987654321", null, null);
+        response = new CustomerResponse(FIXED_UUID, "John", "Doe", "john.doe@example.com", "5511987654321", "52998224725", "CPF", null, null);
     }
 
     @Nested
-    @DisplayName("GET /v1/customer — findAll")
+    @DisplayName("GET /v1/customers — findAll")
     class FindAll {
 
         @Test
         @DisplayName("should return paginated list when customers exist")
         void shouldReturnPaginatedListWhenCustomersExist() {
-            PageableRequest pageable = mock(PageableRequest.class);
+            PageableRequestDto pageable = mock(PageableRequestDto.class);
             when(pageable.getQ()).thenReturn(null);
             when(pageable.getPage()).thenReturn(0);
             when(pageable.getSize()).thenReturn(10);
 
-            Pagination pagination = new Pagination(0, 10, 1L, 1, false, false);
-            PageableResponse<CustomerResponse> page = new PageableResponse<>(List.of(response), pagination);
+            PaginationDto paginationDto = new PaginationDto(0, 10, 1L, 1, false, false);
+            PageableResponseDto<CustomerResponse> page = new PageableResponseDto<>(List.of(response), paginationDto);
 
             when(service.findAll(null, 0, 10)).thenReturn(Uni.createFrom().item(page));
 
-            PageableResponse<CustomerResponse> result = controller.findAll(pageable).await().indefinitely();
+            PageableResponseDto<CustomerResponse> result = controller.findAll(pageable).await().indefinitely();
 
             assertNotNull(result);
             assertEquals(1, result.content().size());
-            assertEquals("John", result.content().get(0).getFirstName());
+            assertEquals("John", result.content().getFirst().getFirstName());
             verify(service).findAll(null, 0, 10);
         }
 
         @Test
         @DisplayName("should return empty page when no customers exist")
         void shouldReturnEmptyPageWhenNoCustomersExist() {
-            PageableRequest pageable = mock(PageableRequest.class);
+            PageableRequestDto pageable = mock(PageableRequestDto.class);
             when(pageable.getQ()).thenReturn(null);
             when(pageable.getPage()).thenReturn(0);
             when(pageable.getSize()).thenReturn(10);
 
-            when(service.findAll(null, 0, 10)).thenReturn(Uni.createFrom().item(PageableResponse.emptyList()));
+            when(service.findAll(null, 0, 10)).thenReturn(Uni.createFrom().item(PageableResponseDto.emptyList()));
 
-            PageableResponse<CustomerResponse> result = controller.findAll(pageable).await().indefinitely();
+            PageableResponseDto<CustomerResponse> result = controller.findAll(pageable).await().indefinitely();
 
             assertTrue(result.content().isEmpty());
         }
@@ -88,7 +90,7 @@ class CustomerControllerTest {
         @Test
         @DisplayName("should propagate exception from service")
         void shouldPropagateException() {
-            PageableRequest pageable = mock(PageableRequest.class);
+            PageableRequestDto pageable = mock(PageableRequestDto.class);
             when(pageable.getQ()).thenReturn(null);
             when(pageable.getPage()).thenReturn(0);
             when(pageable.getSize()).thenReturn(10);
@@ -101,7 +103,7 @@ class CustomerControllerTest {
     }
 
     @Nested
-    @DisplayName("GET /v1/customer/{id} — findById")
+    @DisplayName("GET /v1/customers/{id} — findById")
     class FindById {
 
         @Test
@@ -128,13 +130,13 @@ class CustomerControllerTest {
     }
 
     @Nested
-    @DisplayName("POST /v1/customer — create")
+    @DisplayName("POST /v1/customers — create")
     class Create {
 
         @Test
         @DisplayName("should return HTTP 201 when create succeeds")
         void shouldReturn201WhenCreateSucceeds() {
-            CustomerCreateRequest dto = new CustomerCreateRequest("John", "Doe", "john.doe@example.com", "5511987654321");
+            CustomerCreateRequest dto = new CustomerCreateRequest("John", "Doe", "john.doe@example.com", "5511987654321", "529.982.247-25");
 
             when(service.create(dto)).thenReturn(Uni.createFrom().voidItem());
 
@@ -145,20 +147,20 @@ class CustomerControllerTest {
         }
 
         @Test
-        @DisplayName("should propagate DuplicatePhoneNumberException")
-        void shouldPropagateDuplicatePhoneException() {
-            CustomerCreateRequest dto = new CustomerCreateRequest("John", "Doe", "john.doe@example.com", "5511987654321");
+        @DisplayName("should propagate DuplicateDocumentException")
+        void shouldPropagateDuplicateDocumentException() {
+            CustomerCreateRequest dto = new CustomerCreateRequest("John", "Doe", "john.doe@example.com", "5511987654321", "529.982.247-25");
 
             when(service.create(dto))
-                    .thenReturn(Uni.createFrom().failure(new DuplicatePhoneNumberException()));
+                    .thenReturn(Uni.createFrom().failure(new DuplicateDocumentException()));
 
-            assertThrows(DuplicatePhoneNumberException.class,
+            assertThrows(DuplicateDocumentException.class,
                     () -> controller.create(dto).await().indefinitely());
         }
     }
 
     @Nested
-    @DisplayName("PUT /v1/customer/{id} — update")
+    @DisplayName("PUT /v1/customers/{id} — update")
     class Update {
 
         @Test
@@ -166,7 +168,7 @@ class CustomerControllerTest {
         void shouldReturn200WithUpdatedBody() {
             CustomerUpdateRequest dto = new CustomerUpdateRequest("Jane", "Doe", "jane.doe@example.com", "5511987654321");
             CustomerResponse updated = new CustomerResponse(FIXED_UUID, "Jane", "Doe", "jane.doe@example.com", "5511987654321",
-                    OffsetDateTime.now(), OffsetDateTime.now());
+                    "52998224725", "CPF", OffsetDateTime.now(), OffsetDateTime.now());
 
             when(service.update(FIXED_UUID, dto)).thenReturn(Uni.createFrom().item(updated));
 
@@ -190,7 +192,7 @@ class CustomerControllerTest {
     }
 
     @Nested
-    @DisplayName("DELETE /v1/customer/{id} — delete")
+    @DisplayName("DELETE /v1/customers/{id} — delete")
     class Delete {
 
         @Test
